[FIX] Overflow-x of CourseFreeCard component

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,10 +29,6 @@
 body {
   @extend .text-body;
   font-family: $panambi-font;
-
-  @media (max-width: 575.98px) {
-    overflow-x: hidden;
-  }
 }
 
 section {
